--- a/ObeTools.csproj
+++ b/ObeTools.csproj
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/ala-obeidat/ObeTools</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <Version>1.2.0</Version>
+    <Version>1.2.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,8 +25,8 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="5.8.4" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
-    <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="Select.HtmlToPdf.NetCore" Version="21.2.0" />
+    <PackageReference Include="ZKWeb.Fork.QRCoder" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
