--- a/ObeTools.csproj
+++ b/ObeTools.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -26,7 +26,6 @@
     <PackageReference Include="EPPlus" Version="5.8.4" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
     <PackageReference Include="Select.HtmlToPdf.NetCore" Version="21.2.0" />
-    <PackageReference Include="ZKWeb.Fork.QRCoder" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
