--- a/ObeTools.csproj
+++ b/ObeTools.csproj
@@ -12,9 +12,11 @@
     <RepositoryUrl>https://github.com/ala-obeidat/ObeTools</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <Version>1.3.3</Version>
+    <Version>1.3.4</Version>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <NeutralLanguage>en</NeutralLanguage>
+    <PackageTags>Excel;TLV;LOG;Encrypt;Hash</PackageTags>
+    <PackageReleaseNotes>Add design to create excel file</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
