update package number

--- a/ObeTools.csproj
+++ b/ObeTools.csproj
@@ -17,6 +17,7 @@
     <NeutralLanguage>en</NeutralLanguage>
     <PackageTags>Excel;TLV;LOG;Encrypt;Hash</PackageTags>
     <PackageReleaseNotes>Fix excel file wrap text</PackageReleaseNotes>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
