--- a/ObeTools.csproj
+++ b/ObeTools.csproj
@@ -18,6 +18,7 @@
     <PackageTags>Excel;TLV;LOG;Encrypt;Hash;Number To Word;Arabic</PackageTags>
     <PackageReleaseNotes>Update nuget package</PackageReleaseNotes>
     <Platforms>AnyCPU;x64</Platforms>
+    <SupportedOSPlatformVersion>10.0.22621.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
